use css to prevent long discussion link overflowing
word-wrap to force word break to new line. Also increase the max label
length to 100

--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -1002,3 +1002,7 @@ li.author-list-item {
 hr.discussion-links-divider {
   margin: 0.5em;
 }
+
+div.discussion-link {
+  word-wrap: break-word;
+}
